# common_metrics_on_video_quality

./: pyproject.toml
common_metrics_on_video_quality/: calculate_fvd.py
